--- a/index.html
+++ b/index.html
@@ -19,8 +19,13 @@
             y despues la alcanzo hasta la casa de <span id="4"></span> que tenia
             muchas ovejas. la vecina le <span id="5"></span> porque era su oveja, que habia perdido el dia anterior
             mientras
-            estaba <samp id="6"></samp>.
+            estaba <span id="6"></span>.
         </p>
+
+    </section>
+
+    <section class="opciones" id="opciones">
+
 
     </section>
 
@@ -29,6 +34,6 @@
     <button id="comprobar">Comprobar</button>
 
 
-    <script src="script.js"></script>
+    <script src="/script.js"></script>
 </body>
 </html>
