--- a/index.html
+++ b/index.html
@@ -13,13 +13,16 @@
     <h1>Completa el texto</h1>
     <section class="texto">
 
-        <p>El niño salio a <span id="0"></span> por el campo y vio una
-            <span id="1"></span>que parecia estar sola y perdida. La llevo hasta
-            el <span id="2"></span> para que tomara un poco de <span id="3"></span>
-            y despues la alcanzo hasta la casa de <span id="4"></span> que tenia
-            muchas ovejas. la vecina le <span id="5"></span> porque era su oveja, que habia perdido el dia anterior
-            mientras
-            estaba <span id="6"></span>.
+        <p>Creemos una base de datos<br>
+            <span id="0"></span> campeones<br>
+            <br>
+            db.<span id="1"></span>("linea")<br>
+            <br>
+            <span id="2"></span>linea<span id="3"></span>({<br>
+            <span id="4"></span>"Mid",<br>
+            <span id="5"></span>"En esta linea se jugaran magos y asesinos"<br>
+            })<br>
+            <span id="6"></span>.
         </p>
 
     </section>
@@ -36,4 +39,5 @@
 
     <script src="/script.js"></script>
 </body>
+
 </html>
