--- a/index.html
+++ b/index.html
@@ -15,14 +15,15 @@
 
         <p>Creemos una base de datos<br>
             <span id="0"></span> campeones<br>
-            <br>
+            Crea una coleccion<br>
             db.<span id="1"></span>("linea")<br>
-            <br>
+            inserta un documento <br>
             <span id="2"></span>linea<span id="3"></span>({<br>
             <span id="4"></span>"Mid",<br>
             <span id="5"></span>"En esta linea se jugaran magos y asesinos"<br>
             })<br>
-            <span id="6"></span>.
+
+           
         </p>
 
     </section>
@@ -34,7 +35,7 @@
 
     <h2 id="resultado"></h2>
 
-    <button id="comprobar">Comprobar</button>
+    <button id="comprobar">Comprobar</button><a href="nivel2.html">Siguiente nivel</a>
 
 
     <script src="/script.js"></script>
