--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
     <button id="comprobar">Comprobar</button><a href="nivel2.html">Siguiente nivel</a>
 
-
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="/script.js"></script>
 </body>
 
