--- a/nivel2.html
+++ b/nivel2.html
@@ -18,7 +18,7 @@
             {<br>
             "tipoLinea": "Mid",<br>
             "descripcion":"En esta linea se jugaran magos y asesinos"<br>
-            <span id="1"></span><span id="2"></span><br>
+            <span class="span1" id="1"></span><span id="2"></span><br>
             {<br>
             "tipoLinea":"Top",<br>
             "descripcion":"En esta linea se juganar luchadores y tanques"<br>
@@ -45,7 +45,7 @@
 
     <button id="comprobar">Comprobar</button><a href="nivel2.html">Siguiente nivel</a>
 
-
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="/script2.js"></script>
 </body>
 
