--- a/nivel2.html
+++ b/nivel2.html
@@ -14,21 +14,21 @@
     <section class="texto">
 
         <p>inserta varios documentos<br>
-            db.linea.insert(<span id="0"></span><br>
+            db.linea.insert(<span id="0" class="span4"></span><br>
             {<br>
             "tipoLinea": "Mid",<br>
             "descripcion":"En esta linea se jugaran magos y asesinos"<br>
-            <span class="span1" id="1"></span><span id="2"></span><br>
+            <span class="span4" id="1"></span><span id="2" class="span5"></span><br>
             {<br>
             "tipoLinea":"Top",<br>
             "descripcion":"En esta linea se juganar luchadores y tanques"<br>
             }<br>
             
-            <span id="3"></span><br>
+            <span id="3" class="span4"></span><br>
             )<br>
 
             consulta las colecctiones<br>
-            <span id="4"></span> <span id="5"></span>
+            <span id="4" class="span6"></span> <span id="5"></span>
             <br>
 
 
