--- a/nivel3.html
+++ b/nivel3.html
@@ -10,20 +10,19 @@
 </head>
 
 <body>
-    <h1>Completa el texto</h1>
+    <h1>Nivel 3 Completa el texto</h1>
     <section class="texto">
 
-        <p>Creemos una base de datos<br>
-            <span id="0" class="span1"></span> campeones<br>
-            Crea una coleccion<br>
-            db.<span id="1"></span>("linea")<br>
-            inserta un documento <br>
-            <span id="2" class="span2"></span>linea<span id="3" class="span3"></span>({<br>
-            <span id="4"></span>"Mid",<br>
-            <span id="5"></span>"En esta linea se jugaran magos y asesinos"<br>
-            })<br>
+        <p>Consultas basicas<br>
+            consulta la coleccion linea<br>
+            db.<span id="0" class="span6"></span> <span id="1" class="span6"></span><br>
+            consulta por nombre<br>
+            db.<span id="2" class="span6"></span>.find({<span id="3" class="span6"></span>:"Mid"})<br>
+            consulta de manera ordenada<br>
+            db.linea.find()<span id="4" class="span6"></span><span id="5" class="span2"></span>
+            <br>
 
-           
+
         </p>
 
     </section>
@@ -38,7 +37,7 @@
     <button id="comprobar">Comprobar</button><a href="nivel2.html">Siguiente nivel</a>
 
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <script src="/script.js"></script>
+    <script src="/script3.js"></script>
 </body>
 
 </html>
