--- a/prueba.html
+++ b/prueba.html
@@ -9,17 +9,23 @@
    </head>
  
    <body>
-      <form id= "form1"
-            name=  "form1"
-            method="post"
-            action="file:///C|/Archivos%20de%20programa/MongoDB/Server/6.0/bin/mongod.EXE">
-         <label> Para ejecutar un archivo del ordenador 
-                (en este ejemplo se lanza el Word)
-                 pulse sobre el botón: 
-             <input type="submit"
-                    name="Submit"
-                    value="Abrir " />
-         </label>
-      </form>
+      <section>
+         <nav>
+         <div className="logo3">
+             <img src={Hotelia}/>
+             <i className="fa-solid fa-bars hamburguer"></i>
+         </div>
+ 
+         <div className="menu outside">
+             <a href="index.html" className="item">Inicio</a>
+             <a href="ubicanos.html" className="item">Ubícanos</a>
+             <a href="file:///C:\mongosh-1.6.0-win32-x64\bin" className="item">Consultar</a>
+             <hr className="menu-hr" noshade=""></hr>
+             <Link to="/login">
+            <button className="navbar-button"><i className="fa-solid fa-user"></i> Iniciar
+                     Sesión</button></Link>        
+         </div>
+     </nav>
+     </section>
    </body>
 </html>
