funcionando_pero_no

--- a/prueba.html
+++ b/prueba.html
@@ -19,7 +19,7 @@
          <div className="menu outside">
              <a href="index.html" className="item">Inicio</a>
              <a href="ubicanos.html" className="item">Ubícanos</a>
-             <a href="file:///C:\mongosh-1.6.0-win32-x64\bin" className="item">Consultar</a>
+             <button><a href="file:C:\mongosh-1.6.0-win32-x64\bin\mongosh.exe">Hola</button>
              <hr className="menu-hr" noshade=""></hr>
              <Link to="/login">
             <button className="navbar-button"><i className="fa-solid fa-user"></i> Iniciar
