--- a/prueba.html
+++ b/prueba.html
@@ -5,27 +5,14 @@
    <head>
       <meta http-equiv="Content-Type"
             content="text/html; charset=ISO 8859-1" />
-      <title>   Ejemplo  </title>
+      <title> Consola</title>
    </head>
  
    <body>
       <section>
-         <nav>
-         <div className="logo3">
-             <img src={Hotelia}/>
-             <i className="fa-solid fa-bars hamburguer"></i>
+         <div className="menu outside">             
+             <button><a href="C:\mongosh-1.6.0-win32-x64\bin\mongosh.exe">Práctica</button>                                                 
          </div>
- 
-         <div className="menu outside">
-             <a href="index.html" className="item">Inicio</a>
-             <a href="ubicanos.html" className="item">Ubícanos</a>
-             <button><a href="file:C:\mongosh-1.6.0-win32-x64\bin\mongosh.exe">Hola</button>
-             <hr className="menu-hr" noshade=""></hr>
-             <Link to="/login">
-            <button className="navbar-button"><i className="fa-solid fa-user"></i> Iniciar
-                     Sesión</button></Link>        
-         </div>
-     </nav>
      </section>
    </body>
 </html>
