--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="icon" type="image/x-icon" href="../../img/juego.png">
+    <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet" />
     <link rel="stylesheet" href="styleIndex.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   
@@ -83,7 +84,7 @@
     </div>
 
 
-
+    <script src="/nav.js"></script>
 </body>
 
 </html>
