--- a/nivel1.html
+++ b/nivel1.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
     <title>Document</title>
 </head>
 
@@ -76,14 +76,13 @@
 
     <h2 id="resultado"></h2>
 
-    <button id="actionBtn">Comprobar</button>
-    <a href="nivel2.html">Siguiente nivel</a>
+    <button id="comprobar" class="actionBtn">Comprobar</button>
 
 </div>
 
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <script src="script.js"></script>
-    <script src="nav.js"></script>
+    <script src="js/script.js"></script>
+    <script src="js/nav.js"></script>
 </body>
 
 </html>
